// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates extensions for iOS 1`] = `
Array [
  ".ios.expo.ts",
  ".native.expo.ts",
  ".expo.ts",
  ".ios.expo.tsx",
  ".native.expo.tsx",
  ".expo.tsx",
  ".ios.expo.mjs",
  ".native.expo.mjs",
  ".expo.mjs",
  ".ios.expo.js",
  ".native.expo.js",
  ".expo.js",
  ".ios.expo.jsx",
  ".native.expo.jsx",
  ".expo.jsx",
  ".ios.ts",
  ".native.ts",
  ".ts",
  ".ios.tsx",
  ".native.tsx",
  ".tsx",
  ".ios.mjs",
  ".native.mjs",
  ".mjs",
  ".ios.js",
  ".native.js",
  ".js",
  ".ios.jsx",
  ".native.jsx",
  ".jsx",
  ".json",
  ".wasm",
]
`;

exports[`creates extensions for web 1`] = `
Array [
  ".web.expo.ts",
  ".expo.ts",
  ".web.expo.tsx",
  ".expo.tsx",
  ".web.expo.mjs",
  ".expo.mjs",
  ".web.expo.js",
  ".expo.js",
  ".web.expo.jsx",
  ".expo.jsx",
  ".web.ts",
  ".ts",
  ".web.tsx",
  ".tsx",
  ".web.mjs",
  ".mjs",
  ".web.js",
  ".js",
  ".web.jsx",
  ".jsx",
  ".json",
  ".wasm",
]
`;
